Simplify database replacement restart safety
Keep package-aware restart planning, exact configuration validation, and bounded database-owner shutdown without the filesystem-identity or restart-handshake machinery. Adapted from d56be9a00 and 8de3ee1ea.